[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scripts/Slime.gd" type="Script" id=1]
[ext_resource path="res://Assets/sprites/slime.png" type="Texture" id=2]
[ext_resource path="res://bar_theme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/sounds/slime_splash.mp3" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 14, 7 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 50, 32, 25 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 50, 32, 25 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 50, 32, 25 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 50, 32, 25 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 50, 32, 25 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 25, 32, 25 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 25, 32, 25 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 25, 32, 25 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 25, 32, 25 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 25 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 25 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 25 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 25 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "Perish",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": false,
"name": "Attack",
"speed": 4.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 13.25, 7.25 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 4.875, 7.125 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=20]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.321569, 0, 0, 1 )

[node name="Slime" type="KinematicBody2D"]
position = Vector2( 1100, 570 )
scale = Vector2( 4, 4 )
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 4 )
shape = SubResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
animation = "Attack"

[node name="HurtBox" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0.75, 4.25 )
shape = SubResource( 12 )

[node name="Vision" type="Area2D" parent="." groups=["EnemyAttacks"]]

[node name="Collision" type="CollisionShape2D" parent="Vision"]
light_mask = 0
position = Vector2( -11.625, 4.25 )
shape = SubResource( 17 )

[node name="HpControl" type="Control" parent="."]
margin_left = -11.0
margin_top = -9.25
margin_right = 11.0
margin_bottom = -5.25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Container" parent="HpControl"]
margin_left = 2.0
margin_right = 19.0
margin_bottom = 3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="HpControl/Container"]
anchor_left = -0.166667
anchor_top = -0.166667
anchor_right = -0.166667
anchor_bottom = -0.166667
margin_left = 2.5
margin_top = 0.333333
margin_right = 19.5
margin_bottom = 3.33333
theme = ExtResource( 3 )
custom_styles/fg = SubResource( 19 )
custom_styles/bg = SubResource( 20 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="SFX" type="Area2D" parent="."]

[node name="Splash" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 4 )
volume_db = -10.0
pitch_scale = 0.8

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Vision" to="." method="_on_Vision_area_entered"]
[connection signal="area_exited" from="Vision" to="." method="_on_Vision_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
